# ogopego

./: .bootstrap.bash  .gitattributes  .gitignore  .golangci.yaml  .ignore  .pkg.go.dev  .vale.ini  AGENTS.md  CHANGELOG.md  CUT.md  Justfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RULES.md  STYLE.md  SYNTAX.md  doc.go  go.mod  go.sum  hatch_build.py  main_test.go  ogopego.go  opencode.json  pyproject.toml
.github/workflows/: default.yml  publish.yml
_archive/gopy/: README.md  cmd_build.go  go.mod  go.sum
_examples/cstrings/: test.py
_examples/slices/: slices.go
_fragments/: Justfile  to_map.go
_vendor/: modules.txt
api/: api.go  api_test.go  pyapi.go
cmd/: doc.go  main.go
cmd/cli/: cli.go  cli_main.go  cmd_boot.go  cmd_run.go  (+3 more)
config/: config.go
context/: basectx.go  context.go  ctx.go  ctx_base.go  ctx_core.go  ctx_test.go  error.go  memento.go  memento_test.go  memo.go  memo_test.go  state.go  test_ctx.go  test_memento.go  test_trace.go  trace.go  trace_test.go
etc/: hatch_build.py  regexp2_issue_report.md
fragments/: array_stack.go  compare_any.go  doc.go  docs.yml  getVersion.go  just_docs.just  mkdocs.yml  options.go  semantics.go  tag.sh  to_map.go
grammar/: tatsu.json
input/: configure_test.go  cursor.go  cursor_str.go  cursor_str_test.go  input.go  memento.go  memento_test.go  patterns.go  strcursor.go  strcursor_more_test.go  test_configure.go  test_memento.go  test_strcursor.go  test_strcursor_more.go
json/: asjson.go  asjson_test.go  boot.go  error.go  import.go  test_boot.go  test_import.go
peg/: analysis.go  asjson_test.go  boot.go  boot_test.go  box.go  call.go  choice.go  comment.go  compile.go  constant.go  cut.go  doc.go  dot.go  emptyclosure.go  eof.go  eol.go  export.go  expressions.go  fail.go  grammar.go  grammar_directives_test.go  import.go  import_test.go  join.go  leftrec.go  link.go  link_test.go  link_validate.go  linking.go  lookahead.go  model.go  model_box.go  model_call.go  model_choice.go  model_choice_go.go  model_closure.go  model_comment.go  model_constant.go  model_cut.go  model_dot.go  (+61 more)
pyapi/: pyapi.go
python/: hatch_build.py  release.py
test/: basic_grammar_test.go  cli_test.go  complex_grammars_test.go  constraints_test.go  defines_test.go  directive_test.go  directives_test.go  ebnf_test.go  eol_test.go  error_handling_test.go  error_test.go  explore_tree_test.go  grammar_structure_test.go  input_positions_test.go  java_end_to_end_test.go  java_grammar_test.go  join_test.go  keyword_test.go  left_recursion_test.go  lookahead_test.go  misc_test.go  model_repr_test.go  model_test.go  naming_test.go  parsing_test.go  patterns_test.go  pretty_test.go  pyre_test.go  roundtrip_test.go  special_forms_test.go  string_test.go  testutil.go  tokens_and_sequences_test.go
tests/: basic_grammar_test.go  cli_test.go  complex_grammars_test.go  constraints_test.go  defines_test.go  directive_test.go  directives_test.go  ebnf_test.go  eol_test.go  error_handling_test.go  error_test.go  grammar_structure_test.go  input_positions_test.go  java_grammar_test.go  join_test.go  keyword_test.go  left_recursion_test.go  lookahead_test.go  misc_test.go  model_test.go  naming_test.go  parsing_test.go  patterns_test.go  pretty_test.go  pyre_test.go  roundtrip_test.go  special_forms_test.go  string_test.go  tokens_and_sequences_test.go
testutil/: testutil.go
tool/: model_repr.go
tree/: tree.go  tree_leaf.go  tree_list.go  tree_map.go  tree_named.go  tree_node.go  tree_test.go
trees/: compound.go  internal.go  leaf.go  tree.go  tree_leaf.go  tree_list.go  tree_map.go  tree_named.go  tree_node.go  tree_test.go
util/: countlines_test.go  doc.go  id.go  indent.go  misc.go  pathts.go  pubmap.go  pygmentize.go  repr.go  repr_test.go  strings.go  testutil.go  version.go
(+165 files in other folders)
