[project]
name = "ogopego"
dynamic = ["version"]
description = "A PEG Parser generator in Go"
readme = "README.md"
authors = [
    { name = "Juancarlo Añez", email = "apalala@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-vcs", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "SYNTAX.md",
    "CUT.md",
    "grammar/tatsu.*",
    "grammar/calc.*",
    "go.*",
    "*.go",
    "api/**/*.go",
    "cmd/**/*.go",
    "pkg/**/*.go",
    "test/**/*.go",
    "python"
]
exclude = [
    "/_*",
    "python/ogopego/bin",
]

[tool.hatch.build.targets.wheel]
packages = ["python/ogopego"]
pure = false
include = [
    "python/ogopego/bin/*"
]
artifacts = [
    "grammar/tatsu.*",
    "grammar/calc.*",
    "*.toml",
]
#[tool.hatch.build.targets.wheel.force-include]
#"python/ogopego/bin" = "ogopego/bin"


[tool.hatch.build.hooks.custom]
path = "python/hatch_build.py"

[dependency-groups]
dev = [
    "wheel>=0.47.0",
]

#exclude = [
#    "python/ogopego/lib/*"
#]
#[tool.hatch.build.targets.wheel.force-include]
#"python/ogopego/lib/{env:HATCH_BIN_NAME:placeholder}" = "ogopego/lib/{env:HATCH_BIN_NAME:placeholder}"

#[tool.hatch.build.targets.wheel.hooks.custom]
#path = "python/ogopego/build.py" # Keeps Hatchling happy during sdist fallbacks

#    ogopego/
#    ├── api/
#    ├── go.mod
#    ├── Justfile
#    ├── pyproject.toml
#    └── python/
#        └── ogopego/
#            ├── __init__.py
#            ├── __main__.py
#            └── lib/
#                ├── ogopego_darwin_arm64
#                ├── ogopego_linux_amd64
#                └── ogopego_windows_amd64.exe