[project]
name = "ogopego"
dynamic = ["version"]
description = "A PEG Parser generator in Go"
readme = "README.md"
authors = [
    { name = "Juancarlo Añez", email = "apalala@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ogo = "ogopego.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "SYNTAX.md",
    "CUT.md",
    "grammar/tatsu.*",
    "grammar/calc.*",
    "go.*",
    "*.go",
    "api/**/*.go",
    "cmd/**/*.go",
    "pkg/**/*.go",
    "test/**/*.go",
    "python",
]
exclude = [
    "/_*",
    "internal/_*",
    "internal/x",
    "python/ogopego/bin",
]

[tool.hatch.build.targets.wheel]
packages = ["python/ogopego"]
pure = false
include = [
    "python/ogopego/bin/*"
]

[tool.hatch.build.hooks.custom]
path = "python/hatch_build.py"

[dependency-groups]
doc = [
    "vale>=3.13.0.0",
]
